assets/sass/layouts/sidebar/_no-sidebar.scss
.cm-narrow-container {
	.cm-secondary {
		display: none;
	}

	.cm-primary {
		margin: 0 auto;
		width: 100%;
		padding-right: 0;
	}

	.cm-content {
		.cm-container {
			max-width: 768px;
		}
	}
}

.cm-right-sidebar {
	.cm-content {
		.cm-primary {
			padding-right: 1.875em;
		}
	}
}

.cm-full-width-container {
	.cm-content {
		.cm-container {
			max-width: 100%;
			padding: 0;

			.cm-primary {
				width: 100%;
				padding-right: 0;
			}
		}
	}
}

.cm-normal-container .cm-primary {
	padding: 0;
}

.cm-normal-container.cm-no-sidebar .cm-primary {
	width: 100%;
}

.cm-no-sidebar .cm-secondary {
	display: none;
}

.cm-primary {
	.cm-entry-summary {
		.cm-block-alignfull {
			margin-left: calc(50% - 50vw);
			margin-right: calc(51% - 50.2vw);
			max-width: unset;
			padding: 0 24px;
		}
	}
}

.cm-started-content {
	.cm-primary {
		.cm-entry-summary {
			.cm-block-alignfull {
				margin-left: calc(50% - 50vw);
				margin-right: calc(51% - 50.2vw);
				max-width: unset;
				padding: 0 24px;
			}
		}
	}

	@media screen and (max-width: 768px) {
		.cm-remove-padding {
			padding: 0 !important;
			border: 0 !important;
		}
	}

	@media screen and (min-width: 768px) {
		.cm-sticky {
			height: 100vh; /* Ensure it fits within the viewport */
			position: sticky;
			top: 20px; /* Distance from the top when scrolling */
		}
	}
}

.cm-normal-container {
	overflow: hidden;

	.cm-primary {
		.cm-entry-summary {
			> .alignfull {
				margin-left: calc(50% - 50vw);
				margin-right: calc(50% - 50vw);
				max-width: unset;

				&.wp-block-cover,
				&.wp-block-cover-image {
					width: unset;
				}
			}

			> .alignwide {
				margin-left: -100px;
				margin-right: -100px;
				max-width: unset;

				&.wp-block-woocommerce-checkout {
					margin-left: unset;
					margin-right: unset;
				}
			}
		}
	}

	&.box-layout {
		.cm-content {
			overflow: hidden;
		}

		.cm-primary {
			.cm-entry-summary {
				> .alignfull {
					margin-left: -30px;
					margin-right: -30px;

					&.wp-block-cover,
					&.wp-block-cover-image {
						width: unset;
					}
				}

				> .alignwide {
					margin-left: -30px;
					margin-right: -30px;
					max-width: unset;
				}
			}
		}
	}
}

@media screen and (max-width: 1200px) {
	.no-sidebar-full-width {
		.cm-primary {
			.cm-entry-summary {
				> .alignwide {
					margin-left: -20px;
					margin-right: -20px;
				}
			}
		}
	}

	.cm-narrow-container {
		.cm-primary {
			.cm-entry-summary {
				> .alignwide {
					margin-left: -50px;
					margin-right: -50px;
				}

				> .alignfull {
					margin-left: -100px;
					margin-right: -100px;
				}
			}
		}
	}
}

